# guess-the-word

./: README.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  utils.ts
frontend/src/components/: ChatInput.tsx  ChatWindow.tsx  CountDown.tsx  CreateGame.tsx  JoinGame.tsx  ReadOnlyCanvas.tsx  WriteCanvas.tsx
frontend/src/hooks/: customEventHook.ts
frontend/src/pages/: DrawingPage.tsx  GuessingPage.tsx  HomePage.tsx  LobbyPage.tsx  ResultsPage.tsx
frontend/src/types/: serverMessages.ts
ws-server/: Cargo.toml  words.txt
ws-server/src/: game.rs  handlers.rs  main.rs  player.rs  server.rs  ws.rs
ws-server/src/messages/: client_messages.rs  mod.rs  server_messages.rs
