[package]
name = "ws-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version= "1", features = ["full"] }
tokio-stream = "0.1.6"
warp = "0.3"
futures = { version = "0.3", default-features=false}
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.50"
uuid = { version = "0.4", features = ["serde", "v4"] }
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8.4"
async-recursion = "1.0.0"